test delete aos

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>BWA Strap</title>
     <link rel="stylesheet" href="assets/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/custom.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css" />
 </head>
 <body>
-    <nav class="navbar fixed-top py-4 navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar py-4 navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/images/logo.png" width="187" alt="">
@@ -296,7 +296,6 @@
     </section>
     
 
-    <div class="my-5"></div>
     
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/js/bootstrap.js"></script>
