--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.8/slick-theme.min.css" />
 </head>
 <body>
-    <nav class="navbar py-4 navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar fixed-top py-4 navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="assets/images/logo.png" width="187" alt="">
