update logo footer responsive

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <img width="185" src="assets/images/logo.png" alt="">
+                    <img width="185" src="assets/images/logo.png" class="img-fluid" alt="">
                 </div>
                 <div class="col-md-3">
                     <h4 class="mb-4">
